--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,7 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "app.py",
-            "use": "@vercel/python"
-        }
-    ],
+    "framework": "flask",
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "app.py"
-        }
+        { "src": "/(.*)", "dest": "app.py" }
     ]
 }
