--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,23 @@
 {
     "version": 2,
-    "framework": "flask",
+    "builds": [
+        {
+            "src": "app.py",
+            "use": "@vercel/python"
+        },
+        {
+            "src": "static/**",
+            "use": "@vercel/static"
+        }
+    ],
     "routes": [
-        { "src": "/(.*)", "dest": "app.py" }
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "app.py"
+        }
     ]
 }
