--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
             "dest": "/static/$1"
         },
         {
+            "src": "/api/(.*)",
+            "dest": "app.py"
+        },
+        {
             "src": "/(.*)",
             "dest": "app.py"
         }
