Update Vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -23,5 +23,10 @@
             "src": "/(.*)",
             "dest": "app.py"
         }
-    ]
+    ],
+    "functions": {
+        "app.py": {
+            "maxDuration": 10
+        }
+    }
 }
